[workspace]

members = [
    "minijail/rust/minijail",
    "minijail/rust/minijail-sys",
    "north",
    "npk",
    "nstar",
    "sextant",
    "north_tests",
    "north_tests/test_container",
    "examples/container/cpueater",
    "examples/container/crashing",
    "examples/container/datarw",
    "examples/container/hello",
    "examples/container/memeater",
    "examples/container/resource/ferris",
    "examples/container/zero_mq_server",
    "examples/container/zero_mq_client",
]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z' # Optimize for size
